<resources>
    <string name="app_name">St. Pauli Service App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="qr_code">QR-Code</string>
    <string name="zur_service_uebersicht">Zur Service Übersicht</string>
    <string name="zur_kunden_uebersicht">Zur Kunden Übersicht</string>
    <string name="zum_qr_scan">Zum QR-Code Scannner</string>
    <string name="tab_qr_code">Qr-Code</string>
    <string name="tab_karte">Karte</string>
    <string name="tab_bestellung">Bestellung</string>
    <string name="hier_kommen_die_bestellungen_hinein">Hier kommen die Bestellungen hinein!</string>
    <string name="textview3">TextView3</string>
    <string name="textview2">TextView2</string>
    <string name="textview1">TextView1</string>

    <string name="service_all_orders_name">Alle Bestellungen</string>
    <string name="service_selected_orders_name">Meine Aufträge</string>
    <string name="service_selected_orders_button">X</string>
    <string name="service_all_orders_button">X</string>
    <string name="btn_exit">X</string>
    <string name="bestellen">Bestellen</string>
    <string name="dem_warenkorb_hinzuf_gen">Dem Warenkorb hinzufügen</string>
    <string name="sub">-</string>
    <string name="anzahl">Anzahl</string>
    <string name="add">+</string>
    <string name="picture_itemView">TODO</string>
    <string name="image">image</string>
    <string name="zurueck">zurück</string>
</resources>
