<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_customer_itemView_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/list_view_border"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:weightSum="100">



    <ImageView
        android:id="@+id/imgView_customer_picture_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="66.6"
        android:contentDescription="@string/image"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="33.3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_customer_name_item"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/textview2" />

        <TextView
            android:id="@+id/textView_customer_description_item"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_13sp"
            android:text="@string/textview3" />
    </LinearLayout>

</LinearLayout>