<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customer_item_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100">


    <ImageView
        android:id="@+id/imgView_picture"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="66.6"
        android:textAlignment="center"
        android:contentDescription="@string/image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="33.3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_name2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/textview2" />

        <TextView
            android:id="@+id/textView_description2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/textview3" />

        <Button
            android:id="@+id/Delete_Button"
            style="@android:style/Widget.Material.Button"
            android:layout_width="112dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="Aus dem Warenkob entfernen" />
    </LinearLayout>

</LinearLayout>