<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="325dp"
    android:layout_gravity="center"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    android:padding="5dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lauout_item_confirm"
        android:layout_width="250dp"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnOrder"
            style="@android:style/Widget.Button"
            android:layout_width="143dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:text="@string/dem_warenkorb_hinzuf_gen"
            android:textAppearance="@style/TextAppearance.Design.Tab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewAnzahl"
            android:layout_width="77dp"
            android:layout_height="52dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/anzahl"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/btnOrder"
            app:layout_constraintEnd_toStartOf="@+id/btn_minus"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.139" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="64dp"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="onClick"
            android:text="@string/add"
            app:layout_constraintBottom_toTopOf="@+id/btn_minus"
            app:layout_constraintStart_toEndOf="@+id/textViewAnzahl"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="64dp"
            android:layout_height="41dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="8dp"
            android:text="@string/sub"
            app:layout_constraintBottom_toTopOf="@+id/imageViewItemConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.509" />

        <ImageView
            android:id="@+id/imageViewItemConfirm"
            android:layout_width="77dp"
            android:layout_height="58dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/picture_itemView"
            app:layout_constraintBottom_toTopOf="@+id/btnOrder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/star_big_on" />

        <TextView
            android:id="@+id/textViewAnzahlInput"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@+id/btn_minus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.089" />

    </android.support.constraint.ConstraintLayout>


</LinearLayout>


